--- a/Build-Files/dockerfile
+++ b/Build-Files/dockerfile
@@ -1,11 +1,14 @@
 FROM ubuntu:20.04
 
 # Install required software
+ARG DEBIAN_FRONTEND=noninteractive
+ENV TZ=Europe/London
 RUN apt-get update
 RUN apt-get install -y nginx \
                        python3 \
                        python3-pip \
-                       python3-venv
+                       python3-venv \
+                       tzdata
 
 # Prepare virtual environment
 RUN pip3 install --upgrade pip
@@ -19,7 +22,7 @@ RUN mkdir /var/www/media
 RUN mkdir /var/www/static
 
 COPY default /etc/nginx/sites-enabled/
-COPY DjangoDemo /var/www/
+COPY DjangoDemo/ /var/www/
 RUN pip install -r /var/www/requirements.txt
 
 # Copy init file
